# cube-thing

./: Cargo.toml  README.md  generate_brightnesses.py  upload.sh
.cargo/: config
src/: animation.rs  dither.rs  frame.rs  main.rs  render.rs  sdf.rs  visual.rs
src/animations/: bounce.rs  lines.rs  mod.rs  sine_thing.rs  utils.rs  waves.rs
src/backends/: backend.rs  mod.rs  null.rs  rpi.rs
