[package]
name = "cube-thing"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["wayland"], optional = true }
bevy-inspector-egui = { version = "0.11.0", optional = true }
bevy_flycam = { version = "0.7.0", optional = true }
bitvec = "1.0.0"
itertools = "0.10.3"
nalgebra = "0.31.0"
num = "0.4.0"
palette = "0.6.0"
rand = "0.8.5"
rapier3d = { version = "0.13.0", features = ["simd-stable"] }
sdfu = { features = ["nalgebra"], git = "https://github.com/simmsb/sdfu.git" }

[features]
default = ["visual"]
visual = ["bevy", "bevy_flycam", "bevy-inspector-egui"]
