[package]
name = "cube-thing"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["wayland", "dynamic"], optional = true }
bevy-inspector-egui = { version = "0.15.0", optional = true }
bevy_flycam = { version = "0.9.0", optional = true }
bitvec = "1.0.1"
itertools = "0.10.5"
nalgebra = "0.31.4"
num = "0.4.0"
palette = "0.6.1"
rand = "0.8.5"
rapier3d = { version = "0.16.0", features = ["simd-stable"] }
sdfu = { features = ["nalgebra"], git = "https://github.com/simmsb/sdfu.git" }

[features]
default = ["visual"]
visual = ["bevy", "bevy_flycam", "bevy-inspector-egui"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
